# prism

./: .dockerignore  .gitignore  agents.md  components.json  package-lock.json  package.json  token-usage-output.txt
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/auth/: mod.rs
src-tauri/src/buffer/: mod.rs  pool.rs  ring.rs
src-tauri/src/capture/: mod.rs
src-tauri/src/capture/linux/: mod.rs
src-tauri/src/capture/macos/: mod.rs
src-tauri/src/capture/windows/: mod.rs
src-tauri/src/commands/: auth.rs  games.rs  library.rs  mod.rs  recording.rs  settings.rs  upload.rs  uploads.rs
src-tauri/src/encoder/: mod.rs
src-tauri/src/encoder/codecs/: mod.rs
src-tauri/src/encoder/linux/: mod.rs
src-tauri/src/encoder/macos/: mod.rs  vt_encoder.rs
src-tauri/src/encoder/windows/: mf_encoder.rs  mod.rs
src-tauri/src/games/: mod.rs  trigger.rs
src-tauri/src/games/cs2/: config.rs  mod.rs  parser.rs
src-tauri/src/games/database/: mod.rs
src-tauri/src/games/moment/: mod.rs
src-tauri/src/games/moment/audio/: mod.rs
src-tauri/src/games/rust/: analyzer.rs  audio_capture.rs  mod.rs  templates.rs
src-tauri/src/hotkey/: mod.rs
src-tauri/src/recording/: mod.rs
src-tauri/src/settings/: config.rs  mod.rs  store.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/upload/: client.rs  mod.rs  queue.rs
website/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.api  Dockerfile.web  Makefile  PLAN.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
website/frontend/: index.html  next-sitemap.config.cjs  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
website/frontend/app/: globals.css  layout.tsx  page.tsx
website/frontend/app/admin/: layout.tsx  loading.tsx  page.tsx
website/frontend/app/admin/users/: loading.tsx  page.tsx
website/frontend/app/dashboard/: layout.tsx  loading.tsx  page.tsx
website/frontend/app/dashboard/clips/: loading.tsx  page.tsx
website/frontend/app/dashboard/settings/: page.tsx
website/frontend/app/docs/: page.tsx
website/frontend/app/download/: loading.tsx  page.tsx
website/frontend/app/features/: page.tsx
website/frontend/app/login/: page.tsx
website/frontend/app/privacy/: page.tsx
website/frontend/app/register/: page.tsx
website/frontend/app/s/[shareId]/: loading.tsx  page.tsx
website/frontend/app/signin/success/: page.tsx
website/frontend/app/u/[username]/: loading.tsx  page.tsx
website/frontend/app/verify-email/: content.tsx  page.tsx
website/frontend/components/: auth-card.tsx  brand-icons.tsx  clip-rename.tsx  clips-grid.tsx  dashboard-shell.tsx  delete-clip-button.tsx  delete-user-button.tsx  download-card.tsx  logout-button.tsx  mobile-docs-nav.tsx  share-button.tsx  share-modal.tsx  site-shell.tsx  skeleton.tsx  ui.tsx  video-player.tsx
website/frontend/lib/: api.ts  brand.ts  server-api.ts  server.ts  types.ts
website/frontend/public/: robots.txt  sitemap-0.xml  sitemap.xml
website/frontend/scripts/: generate-assets.mjs
website/frontend/src/: App.tsx  index.css
website/frontend/src/components/: AdminGuard.tsx  AuthGuard.tsx  DashboardLayout.tsx
website/frontend/src/lib/: api.ts
website/frontend/src/pages/: ClipDetailPage.tsx  HomePage.tsx  LibraryPage.tsx  LoginPage.tsx  PlayerPage.tsx  RegisterPage.tsx  SettingsPage.tsx
website/frontend/src/pages/admin/: AdminClipsPage.tsx  AdminDashboard.tsx  AdminLogsPage.tsx  AdminSettingsPage.tsx  (+2 more)
website/frontend/src/stores/: auth.ts
website/scripts/: reconcile-sqlx-001-checksum.sql
website/src/: config.rs  email.rs  errors.rs  frontend.rs  main.rs  thumbnail.rs
website/src/api/: admin.rs  auth.rs  clips.rs  mod.rs  public.rs  tags.rs
website/src/auth/: api_key.rs  jwt.rs  mod.rs
website/src/db/: api_keys.rs  clips.rs  config.rs  mod.rs  tags.rs  users.rs
website/src/db/migrations/: 001_initial_schema.sql  002_alter_duration_secs_type.sql  002_api_keys.sql  002_email_verification.sql  003_activity_logs.sql  004_server_config.sql  005_google_auth.sql  006_normalize_share_id_default.sql  009_auth_constraints.sql  010_verification_code.sql  011_two_factor.sql  012_real_name.sql  013_two_factor_method.sql
website/src/middleware/: mod.rs  rate_limit.rs  timeout.rs
website/src/storage/: local.rs  mod.rs
(+53 files in other folders)
