[package]
name = "prism"
version = "0.1.0"
description = "Cross-platform game clipping app"
authors = ["you"]
edition = "2021"

[lib]
name = "prism_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
thiserror = "1"
async-trait = "0.1"
mp4 = "0.14.0"
bytes = "1.12"
dirs = "6"
tauri-plugin-global-shortcut = "2"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "8", features = ["async", "macos_15_0"] }
videotoolbox = { version = "0.18.1", features = ["async"] }
apple-cf = "0.9.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# pipewire = { version = "0.8" }
