[package]
name = "prism"
version = "0.2.4"
description = "Cross-platform game clipping app"
authors = ["you"]
edition = "2021"

[lib]
name = "prism_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
thiserror = "1"
mp4 = "0.14.0"
bytes = "1.12"
dirs = "6"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
image = { version = "0.25", default-features = false, features = ["jpeg"] }
base64 = "0.22"
tiny_http = "0.12"
realfft = "3.5"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "8", features = ["async", "macos_15_0"] }
videotoolbox = { version = "0.18.1", features = ["async"] }
apple-cf = "0.9.3"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_MediaFoundation",
    "Win32_System_Com",
    "Win32_UI_WindowsAndMessaging",
] }
wasapi = "0.23"

[target.'cfg(target_os = "linux")'.dependencies]
# pipewire = { version = "0.8" }
